--- a/calendars/public/index.html
+++ b/calendars/public/index.html
@@ -62,7 +62,7 @@
 		.items .item {
 			flex: 1 0 300px;
 			box-sizing: border-box;
-			background: -webkit-linear-gradient(to right, rgba(242, 242, 210, 0.3), white));
+			background: -webkit-linear-gradient(to right, rgba(242, 242, 210, 0.3), white);
 			background: linear-gradient(to right, rgba(242, 242, 210, 0.3), white );
 			color: #171e42;
 			padding: 10px;
