Rectifying the differences between chat and calendar

--- a/group-chat-owner/sites/popsong/index.html
+++ b/group-chat-owner/sites/popsong/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 <head>
-
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="author" content="Richard Leddy" />
@@ -14,88 +13,9 @@
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
 
-<script>
-	//
-	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
-
-	async function media_startup(tracking,protocol,media,counter_link,session) { // _x_link_counter > counter_link
-		if ( tracking === undefined ) return false
-		if ( protocol === 'ipfs' ) {
-			let links = await crypto_ready_counted(counter_link,tracking,session,media)  // src is for checking...
-			return links
-		} else if ( protocol === 'local' ) {
-			let links = await clear_counted(counter_link,tracking,session,media)  // src is for checking...
-			return links
-		} else {		// default
-			counter_link = "localhost:7777"
-			let links = await clear_counted(counter_link,tracking,session,media)
-			return links
-		}
-	}
-
-	// source_link = await media_startup(audio,'audio','ipfs',a_cid,source,scounter)
-
-	// source_link = await media_startup(tracking,media.protocol	media,counter_service,session)
-	// media_links = await media_startup(tracking,'ipfs',			media,counter_service,session)
-
-	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
-
-	// the counter link is complete, stored in the _x_link_counter field of the meta object
-
-	async function crypto_ready_counted(counter_link,tracking,session,src) {
-		//
-		let prot = "http:"  // https
-		let sp = "//"
-		let url = `${prot}${sp}${counter_link}/key-media/${tracking}`
-		if ( (typeof session === 'string') && (session.length > 0) ) {
-			url += `/${session}`
-		}
-		//
-		try {
-			let req_obj = {
-				"url" : url
-			}
-			let result = await app_make_request(session,req_obj)  // asks the frame to get the object
-			if ( result.status === "OK" ) {
-				return result.links
-			}
-		} catch(e) {
-		}
-		return false
-	}
-
-
-	async function clear_counted(counter_link,tracking,session,src) {
-		//
-		let prot = location.protocol
-		let sp = "//"
-		let url = `${prot}${sp}${counter_link}/clear-media/${tracking}`
-		if ( (typeof session === 'string') && session.length > 0 ) {
-			url += `/${session}`
-		}
-		//
-		try {
-			let req_obj = {
-				"url" : url
-			}
-			let result = await app_make_request(session,req_obj)  // asks the frame to get the object
-			if ( result.status === "OK" ) {
-				return result.links
-			}
-		} catch(e) {
-		}
-		return false
-	}
-
-	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
-	async function retrieve_session() {			// should be stored in some kind of local storage....
-		return await app_fetch_session()
-	}
-
-	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
-</script>
-
 	<script defer src='./build/bundle.js'></script>	
+
+
 	<link rel="canonical" href="http://www.popsongnow.com">
 
 	<meta name="description" content="Make you songs safe as soon as you think of them.">
@@ -854,7 +774,7 @@ html {
 					</a>
 				</td>
 				<td>
-                    <h1>Popsong Now Streams</h1>
+                    <h1>Popsong Now Blog</h1>
 				</td>
 				<td>
 					&nbsp;
@@ -879,470 +799,74 @@ html {
 </html>
 <script>
 
-
-// SHARED CONSTANTS
-
-
-// SITE PAGE
-//
-const SITE_PAGE_TO_FRAME = "site_page_to_frame"
-const SITE_PAGE_TO_BUILDER = "site_page_to_builder"
-const SITE_PAGE_TO_ALL = "RELAY"
-const SITE_RELATES_TO_BUILDER = "site_page_request_id"
-const SITE_RELATES_TO_FRAME = "site_page_request_action"
-const SITE_RELATES_TO_ALL = "site_frame_yields_news"
-
-// FRAME PAGE
-const FRAME_PAGE_TO_HOSTED_APP = "frame_page_to_hosted_app"
-const FRAME_PAGE_TO_SITE = "frame_page_to_site"
-const FRAME_PAGE_TO_BUILDER = "frame_page_to_builder"
-const FRAME_PAGE_TO_SERVICE_WORKER = "frame_page_to_sw"
-const FRAME_PAGE_TO_WORKER = "frame_page_to_w"
-const FRAME_PAGE_RELATES_TO_SITE = "frame_page_injector"
-const FRAME_PAGE_RELATES_TO_BUILDER = "frame_page_reponses"
-const FRAME_PAGE_RELATES_TO_SERVICE_WORKER = "frame_page_shared_action"
-const FRAME_ACTION_TO_APP = "frame_page_request_action"
-const FRAME_REQUEST_SESSION = "frame_page_request_session"
-const FRAME_ACTION_FROM_APP = "hosted_app_requests_action"
-const FRAME_PAGE_TO_PUBLISHER = "frame_page_to_publisher"
-const FRAME_PAGE_RELATES_TO_PUBLISHER= "frame_page_publications"
-const FRAME_ACTION_FROM_PUBLISHER = "publisher_app_requests_action"
-
-
-// APP PAGE
-//
-const HOSTED_APP_TO_FRAME = "hosted_app_to_frame"
-const HOSTED_APP_TO_ALL = "RELAY"
-const APP_RELATES_TO_FRAME = "app_in_human_context"
-const APP_RELATES_TO_ALL = "app_in_frame_yields_news"
-
-// BUILDER PAGE
-//
-const BUILDER_PAGE_TO_FRAME = "builder_page_to_frame"
-const BUILDER_PAGE_TO_SITE = "builder_page_to_site"
-const BUILDER_RELATES_TO_SITE = "builder_page_injector"
-const BUILDER_ACTION_TO_FRAME = "builder_page_request_action"
-
-// HUMAN FRAME WORKER
-const WORKER_TO_FRAME = "worker_to_frame"
-const WORKER_RELATES_TO_FRAME = "worker_request_action"
-
-
-//
-// actions
-const FRAME_COMPONENT_RESPOND = "respond"
-const FRAME_COMPONENT_RESPONDING = "responding"
-const FRAME_ACTION_LOAD_APP = "load-app"
-const FRAME_ACTION_INSTALL = "install-id"
-const FRAME_ACTION_INJECT = "inject"
-const FRAME_START_SESSION = "start-session"
-const FRAME_HAS_SESSION = "has-session"
-const FRAME_CHECK_SESSION = "check-session"
-const FRAME_NEEDS_SIGNATURE = "get-signature"
-const FRAME_WANTS_SESSION = "get-session"
-const FRAME_STOP_SESSION = "stop-session"
-const FRAME_HAS_PERSONALIZATION = "has-personalization"
-const SITE_WANTS_SIGNATURE = "send-sig-remote"
-const HOST_UP_REQ_UPLOAD = "send-request-upload"
-const FRAME_REQ_DATA = "send-request-respond"
-
-
-const MANAGER_PAGE_TO_FRAME = "from-manager-to-frame"
-const ID_MANAGER_ACTION_TO_FRAME = "id-presence-manager"
-const FRAME_ACTION_REMOVE = "id-manager-remove-id"
-const FRAME_ACTION_UPLOAD = "id-manager-upload-id"
-const FRAME_ACTION_DOWNLOAD = "id-manager-download-id"
-const FRAME_ACTION_DOWNLOAD_PUBLIC = "id-manager-download-public-intro"
-const FRAME_MANAGE_PICTURE_ASSET = "manager-picture-asset"
-const FRAME_ACTION_ATTACH = "manager-asset-attach"
-
-const HOST_APP_PERSONALIZATION = "personalization"
-const HOST_APP_WANTS_SESSION = "session-to-app"
-
-
-// categories
-const FRAME_COMPONENT_SAY_ALIVE = "q-alive"
-const FRAME_COMPONENT_MANAGE_ID = "m-igid"
-const FRAME_TO_APP_PUBLIC_COMPONENT = "process-public-info"
-const SITE_TO_FRAME_SESSIONS = "transfer-session"
-const FRAME_TO_SITE_MANAGE_SESSION = "site-manage-session"
-const WORKER_TO_FRAME_SESSIONS = "w-transfer-session"
-const FRAME_WORKER_TO_SESSIONS = "transfer-session"
-const FRAME_TO_HOSTED_APP_SESSIONS = "transfer-session"
-const FRAME_TO_APP_SIGNATURE = "signed-data"
-const FRAME_SIGNED = "yep-signed"
-const FRAME_POSTED_PRIMARY = "yep-primary-response"
-const FRAME_RAN_PUB_OP = "yep-publication-operation"
-//
-const HOSTED_APP_FILE_OPERATION = "yep-file-creation-db"
-const FRAME_TO_HOSTED_APP_DATA = "yep-data-from-db"
-const FRAME_LIST_DATA = "frame-lists-data-part-ids"
-const FRAME_RETURNS_DATA = "frame-provides-data-part"
-const FRAME_RETURNS_SESSION_CHECK = "frame-provides-session-check"
-
-// PUBLISHER PAGE
-const HOSTED_PUBLISHER_TO_FRAME = "publisher_to_frame"
-const PUBLISHER_RELATES_TO_FRAME = "publisher_ask_frame_op"
-
-
-// ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
-
-//
-let g_user_current_session = false
-let g_current_user_id = false
-let g_current_user_name = false
-let g_current_pub_identity = false
-
-
-const g_message_template =  {
-                                "category" : "",
-                                "direction" : "",
-                                "action" : "",
-                                "relationship" : ""
-                            }
-
-
-/// END OF CONSTANTS  (ALPHA)
-
-
-
-
-// HOSTED APP PAGE COM
-//
-if ( typeof g_message_template === undefined ) {
-    window.g_message_template = g_message_template = {
-        "category" : "",
-        "direction" : "",
-        "action" : "",
-        "relationship" : ""
-    }
-}
-
-// constants in shared constants
-
-let g_frame_page = window.parent
-
-let hosted_page_application_handlers = (category,action,relationship,params) => {}
-
-
-
-function responding_alive() {
-    let message = {
-        "category": FRAME_COMPONENT_SAY_ALIVE,
-        "action" : FRAME_COMPONENT_RESPOND,
-        "data" : false
-    }
-    tell_frame_page(message)
-}
-
-
-function install_frame_page_response() {
-    window.addEventListener("message", (event) => {
-        let page_source = event.origin
-        if ( page_source !== '*' ) {
-            // let opener = event.source --- the site page is assumed to be the top level of the interactions
-            try {
-                let mobj = JSON.parse(event.data)
-                let category = mobj.category
-                let relationship = mobj.relationship
-                let action = mobj.action
-                let direction = mobj.direction
-                //
-                if ( direction === FRAME_PAGE_TO_PUBLISHER ) {
-                    if ( category === FRAME_COMPONENT_SAY_ALIVE ) {
-                        if ( action === FRAME_COMPONENT_RESPONDING ) {
-                            console.log("functioning")
-                        }
-                    } else {
-                        let params = mobj.data
-                        hosted_page_application_handlers(category,action,relationship,params)
-                    }
-                }
-            } catch (e) {
-            }    
-        }
-    })
-}
-
-
-let injest_personalization = false
-let injest_session = false
-let application_specific_handlers = (category,action,relationship,params) => {}
-
-let personalization = (post_params) => {}
-
-
-hosted_page_application_handlers = async (category,action,relationship,params) => {
-    switch ( category ) {
-        case HOST_APP_PERSONALIZATION : {
-            if ( typeof injest_personalization === "function" ) {
-                await injest_personalization(action,params)
-            }
-            break;
-        }
-        case FRAME_TO_HOSTED_APP_SESSIONS : {          /// a hosted page that does not start a session.
-            if ( typeof injest_session === "function" ) {
-                await injest_session(action,params)
-            }
-            break;
-        }
-        default: {                  /// any other actions ... could be a login page that fetches a session
-            await application_specific_handlers(category,action,relationship,params)
-            break;
-        }
-    }
-}
-
-
-function tell_frame_page(message) {
-    if ( !g_frame_page ) return(false)
-    let msg = Object.assign({},g_message_template)
-    msg.direction = HOSTED_PUBLISHER_TO_FRAME
-    msg.relationship = PUBLISHER_RELATES_TO_FRAME
-    msg.action = message.action
-    msg.category = message.category
-    msg.data = message.data
-    let message_str = JSON.stringify(msg)
-    g_frame_page.postMessage(message_str,'*')
-    return true
-}
-
-function relay_to_pages(message) {
-    if ( !g_frame_page ) return(false)
-    let msg = Object.assign({},g_message_template)
-    msg.direction = HOSTED_APP_TO_ALL
-    msg.relationship = APP_RELATES_TO_ALL
-    msg.action = message.action
-    msg.category = message.category
-    msg.data = message.data
-    let message_str = JSON.stringify(msg)
-    g_frame_page.postMessage(message_str,'*')
-}
-
-
-
-// END OF HOSTED APP PAGE COM  (ALPHA)
-
-
-
-
-//  fetchUrl
-// //
-// fetch with GET method
-async function fetchUrl(endpoint) {
-	let myRequest = new Request(endpoint);
-	try {
-		const body = await fetch(myRequest, {
-									method: 'GET', // *GET, POST, PUT, DELETE, etc.
-									mode: 'cors', // no-cors, *cors, same-origin
-									cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
-									credentials: 'omit', // include, *same-origin, omit
-									redirect: 'follow', // manual, *follow, error
-									referrerPolicy: 'no-referrer', // no-referrer, *client
-								});
-		//
-		let infoObj = await body.json();
-		return(infoObj)
-		//
-	} catch (e) {
-		console.log(e.message)
-		return(false)
-	}
-}
-
-async function postData(url = '', data = {}, creds = 'omit', do_stringify = true) {
-	// Default options are marked with *
-	const response = await fetch(url, {
-		method: 'POST', // *GET, POST, PUT, DELETE, etc.
-		mode: 'cors', // no-cors, *cors, same-origin
-		cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
-		credentials: creds, // include, *same-origin, omit
-		headers: {
-			'Content-Type': 'application/json'
-		},
-		redirect: 'follow', // manual, *follow, error
-		referrerPolicy: 'no-referrer', // no-referrer, *client
-		body: (do_stringify ? JSON.stringify(data)  : data)	// body data type must match "Content-Type" header
-	});
-	if ( response.ok == false ) {
-		console.log(response.status + ': ' + response.statusText)
-	}
-	return await response.json(); // parses JSON response into native JavaScript objects
-}
-
-function hide_interface_box() {
-	let display = document.getElementById('interface-box')
-	if ( display ) {
-		display.style.visibility = "hidden"
-		display.style.display = "none"
-	}
-}
-
-function hide_box(bxname) {
-	let display = document.getElementById(bxname)
-	if ( display ) {
-		display.style.visibility = "hidden"
-		display.style.display = "none"
-	}
-}
-
-function show_box(bxname) {
-	let display = document.getElementById(bxname)
-	if ( display ) {
-		display.style.visibility = "visible"
-		display.style.display = "block"
-	}
-}
-
-hide_box('error-box')
-hide_box('success-box')
-
-async function post_submit(fields) {
-	let bdy = {}
-	fields.forEach(element => {
-		let fld = document.getElementById(element)
-		if ( fld ) {
-			bdy[element] = fld.value
+	async function postData(url = '', data = {}, creds = 'omit', do_stringify = true) {
+		// Default options are marked with *
+		const response = await fetch(url, {
+			method: 'POST', // *GET, POST, PUT, DELETE, etc.
+			mode: 'cors', // no-cors, *cors, same-origin
+			cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
+			credentials: creds, // include, *same-origin, omit
+			headers: {
+				'Content-Type': 'application/json'
+			},
+			redirect: 'follow', // manual, *follow, error
+			referrerPolicy: 'no-referrer', // no-referrer, *client
+			body: (do_stringify ? JSON.stringify(data)  : data)	// body data type must match "Content-Type" header
+		});
+		if ( response.ok == false ) {
+			console.log(response.status + ': ' + response.statusText)
 		}
-	});
-	let url = bdy.post_url
-	if ( url ) {
-		delete bdy.post_url
-		//
-		let resp = await postData(url, bdy)
-		//
-		if ( resp ) hide_interface_box()
-		if ( resp && (resp.OK === 'true') ) {
-			show_box('success-box')
-		} else {
-			show_box('error-box')
+		return await response.json(); // parses JSON response into native JavaScript objects
+	}
+
+	function hide_interface_box() {
+		let display = document.getElementById('interface-box')
+		if ( display ) {
+			display.style.visibility = "hidden"
+			display.style.display = "none"
 		}
 	}
-}
 
-
-
-// ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
-
-let g_responder_tables = {
-	"session-req" : {
-		"resolver" : false,
-		"rejector" : false
-	},
-	"data-reg" : {
-		"resolver" : false,
-		"rejector" : false
+	function hide_box(bxname) {
+		let display = document.getElementById(bxname)
+		if ( display ) {
+			display.style.visibility = "hidden"
+			display.style.display = "none"
+		}
 	}
-}
 
+	function show_box(bxname) {
+		let display = document.getElementById(bxname)
+		if ( display ) {
+			display.style.visibility = "visible"
+			display.style.display = "block"
+		}
+	}
 
+	hide_box('error-box')
+	hide_box('success-box')
 
-application_specific_handlers = async (category,action,relationship,params) => {
-	try {
-		if ( category === FRAME_TO_APP_PUBLIC_COMPONENT ) {
-			switch ( action ) {
-				case FRAME_HAS_SESSION: {
-					let response = params.response
-					if ( response ) {
-						g_responder_tables["session-req"].resolver(response)
-					} else {
-						g_responder_tables["session-req"].rejector()
-					}
-					break
-				}
-				case FRAME_TO_HOSTED_APP_DATA: {
-					let response = params.response
-					if ( response ) {
-						g_responder_tables["data-req"].resolver(response)
-					} else {
-						g_responder_tables["data-req"].rejector()
-					}
-					break
-					break
-				}
+	async function post_submit(fields) {
+		let bdy = {}
+		fields.forEach(element => {
+			let fld = document.getElementById(element)
+			if ( fld ) {
+				bdy[element] = fld.value
+			}
+		});
+		let url = bdy.post_url
+		if ( url ) {
+			delete bdy.post_url
+			//
+			let resp = await postData(url, bdy)
+			//
+			if ( resp ) hide_interface_box()
+			if ( resp && (resp.OK === 'true') ) {
+				show_box('success-box')
+			} else {
+				show_box('error-box')
 			}
 		}
-	} catch (e) {
-		console.log(e)
 	}
-}
-
-
-
-
-function promise_handling(source_name) {
-	if ( g_responder_tables[source_name] !== undefined ) {  // do we implement this entry?
-		let p = new Promise((resolve,reject) => {
-			g_responder_tables[source_name].resolver = (resp_obj) => {
-				g_responder_tables[source_name] = {
-					"resolver" : false,
-					"rejector" : false            
-				}
-				resolve(resp_obj)
-			}
-			g_responder_tables[source_name].rejector = () => {
-				g_responder_tables[source_name] = {
-					"resolver" : false,
-					"rejector" : false            
-				}
-				reject(false)
-			}
-		})
-		return p    
-	}
-	return false
-}
-
-
-
-
-async function app_fetch_session() {
-	if ( g_frame_page ) {
-		let message = {
-			"category": FRAME_ACTION_FROM_APP,
-			"action" : FRAME_WANTS_SESSION,
-			"data" : location.hostname
-		}
-		//
-		tell_frame_page(message)  // ask for the primary transition to be handled by the human frame...
-		//
-		try {
-			let session = await promise_handling("session-req")
-			return session
-		} catch (e) {
-		}
-	}
-	return false
-}
-
-
-
-async function app_make_request(session,req_obj) {
-	if ( g_frame_page ) {
-		req_obj.session_key = session
-		let message = {
-			"category": FRAME_ACTION_FROM_APP,
-			"action" : FRAME_REQ_DATA,
-			"data" : req_obj
-		}
-		//
-		tell_frame_page(message)  // ask for the primary transition to be handled by the human frame...
-		//
-		try {
-			let response = await promise_handling("data-req")
-			return response
-		} catch (e) {
-		}
-	}
-	return false
-}
-
-
-
-
-install_frame_page_response()
-
-
-
 
 </script>
