--- a/streams-manager/public/index.html
+++ b/streams-manager/public/index.html
@@ -76,7 +76,7 @@
 	}
 
 	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
-	function retrieve_session() {			// should be stored in some kind of local storage....
+	async function retrieve_session() {			// should be stored in some kind of local storage....
 		return "a0d9uqkrjsifh"     // test value
 	}
 
@@ -596,6 +596,7 @@ const FRAME_STOP_SESSION = "stop-session"
 const FRAME_HAS_PERSONALIZATION = "has-personalization"
 const SITE_WANTS_SIGNATURE = "send-sig-remote"
 const HOST_UP_REQ_UPLOAD = "send-request-upload"
+const FRAME_REQ_DATA = "send-request-respond"
 
 
 const MANAGER_PAGE_TO_FRAME = "from-manager-to-frame"
@@ -2179,7 +2180,7 @@ async function session_startup_process() {
 }
 
 
-window.onload = (ev) => {
+window.onload = (ev) => {  // loaded after the frame page loads
 	g_proxy.set_links({
 			"new_entry" : {
 				"link" : "publication-commands",
