Separate out the file uploader and make it fit a cellphone

--- a/file-uploader/public/index.html
+++ b/file-uploader/public/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 	<meta id="theme-color" name="theme-color" content="#452770">
 
-	<title>Pop Song Blog</title>
+	<title>{{village-blog}}</title>
 
 	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel='stylesheet' href='./global.css'>
@@ -84,7 +84,7 @@
 </script>
 
 	<script defer src='./build/bundle.js'></script>	
-	<link rel="canonical" href="http://www.popsongnow.com">
+	<link rel="canonical" href="{{host_url}}">
 
 	<meta name="description" content="Make you songs safe as soon as you think of them.">
 
@@ -474,6 +474,48 @@ async function postData(url = '', data = {}, creds = 'omit', do_stringify = true
 }
 
 
+//$>>	postDataWithRefer
+// //
+//  call fetch with method POST tyr to help with parameters..  If data is FromData set do_stringify to false
+//  default content type 'application/json'
+//  User 'cors', Default cres = omit, If ctype == 'multipart/form-data' be sure to use FormData -- lets fetch set content type.
+//  RETURNS: parsed JSON object or an empty object. ... Check for fields
+//
+async function postDataWithRefer(url = '', data = {}, creds = 'omit', do_stringify = true, ctype) {
+	let content_type = 'application/json'
+	if ( ctype !== undefined ) {
+		content_type = ctype            // ctype is content type
+	}
+	let options = {
+		method: 'POST', // *GET, POST, PUT, DELETE, etc.
+		mode: 'cors', // no-cors, *cors, same-origin
+		cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
+		credentials: creds, // include, *same-origin, omit
+		headers: {
+			'Content-Type': content_type
+		},
+		redirect: 'error', // manual, *follow, error
+		referrerPolicy: 'origin', // no-referrer, origin
+		body: (do_stringify ? JSON.stringify(data)  : data)	// body data type must match "Content-Type" header
+	}
+
+	if ( ctype === 'multipart/form-data') {
+		delete options.headers['Content-Type']  // content type will be set automatically with a boundary
+	}
+
+	// Default options are marked with *
+	const response = await fetch(url, options);
+	if ( response.ok == false ) {
+		console.log(response.status + ': ' + response.statusText)
+		return {}
+	} else {
+		return await response.json(); // parses JSON response into native JavaScript objects
+	}
+}
+
+
+
+
 //$>>	post_submit
 function hide_interface_box() {
 	let display = document.getElementById('interface-box')
@@ -530,6 +572,7 @@ async function post_submit(fields) {
 fetchEndPoint
 fetchUrl
 postData
+postDataWithRefer
 post_submit
 */
 
@@ -681,6 +724,9 @@ if ( typeof g_message_template === undefined ) {
 // constants in shared constants
 
 let g_frame_page = window.parent
+if ( g_frame_page.postMessage === undefined ) {
+	console.log("parent does not receive messages ")
+}
 
 let hosted_page_application_handlers = (category,action,relationship,params) => {}
 
