updates for the uploader

--- a/file-uploader/public/index.html
+++ b/file-uploader/public/index.html
@@ -7,11 +7,16 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 	<meta id="theme-color" name="theme-color" content="#452770">
 
-	<title>{{village-blog}}</title>
+	<title>cloud.copious.world uploader</title>
 
 	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
+
+	<script defer src='./build/bundle.js'></script>	
+	<link rel="canonical" href="https://www.copious.world">
+
+	<meta name="description" content="Uploader component for use in a human page publisher frame.">
 
 <script>
 	//
@@ -83,10 +88,6 @@
 	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
 </script>
 
-	<script defer src='./build/bundle.js'></script>	
-	<link rel="canonical" href="{{host_url}}">
-
-	<meta name="description" content="Make you songs safe as soon as you think of them.">
 
 </head>
 <script>
