--- a/contact/public/index.html
+++ b/contact/public/index.html
@@ -9,7 +9,7 @@
 
 	<title>Copious Admin Contacts</title>
 
-	<link rel='icon' type='image/png' href='./favicon.png'>
+	<link rel="icon" type="image/svg+xml" href="./copiousLogo.svg" />
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
 	
