--- a/demos/public/index.html
+++ b/demos/public/index.html
@@ -12,7 +12,7 @@
 	<title>Copious World</title>
 	<meta name="description" content="An entry point into the our world of AI, IoT, and Communities built around songs, etc.">
 
-	<link rel='icon' type='image/png' href='./favicon.png'>
+	<link rel="icon" type="image/svg+xml" href="./copiousLogo.svg" />
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
 
