Make the wrapper files into templates

--- a/mail/public/index.html
+++ b/mail/public/index.html
@@ -7,17 +7,16 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 	<meta id="theme-color" name="theme-color" content="#452770">
 
-	<title>Copious Admin Contacts</title>
+	<title>$$TITLE</title>
 
-	<link rel="icon" type="image/svg+xml" href="./copiousLogo.svg" />
+	<link rel="icon" type="image/svg+xml" href="./$$LOGO.svg" />
+
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
-	
 	<script defer src='./build/bundle.js'></script>	
 
-	<link rel="canonical" href="http://www.copious.world">
-
-	<meta name="description" content="Copious World Admin Pages.">
+	<link rel="canonical" href="$$CANONICAL">
+	<meta name="description" content="$$CONTENT">
 
 <script>
 
@@ -27,7 +26,7 @@
 
 </script>
 
-	<style>
+<style>
 		/*csslint important:false*/
 
 		/* ==========================================================================
@@ -650,7 +649,7 @@
 			display: none;
 		}
 
-	</style>
+</style>
 </head>
 <script>
 	var g_siteURL = window.location.host;
@@ -675,8 +674,10 @@
 
 					</a>
 				</td>
-				<td>
-                    Contact List and Manager
+				<td style="width:62;height:63">
+					<a class="nav-link" href="/">
+$$SVG_CONTENT
+					</a>
 				</td>
 				<td>
 					&nbsp;
@@ -691,7 +692,7 @@
 	<footer>
 		<ul class="footer-list">
 			<li>
-				<a href="http://www.copious.world">copyright &copy; 2022 copious.world</a>
+				<a href="http://www.$$BASE_URL">copyright &copy; $$COPYRIGHT_YEAR $$BASE_URL</a>
 			</li>
 		</ul>
 	</footer>
