--- a/streams/public/index.html
+++ b/streams/public/index.html
@@ -24,6 +24,7 @@
 	//
 	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
 
+	// _x_link_counter -> counter_link
 	async function media_startup(tracking,protocol,media,counter_link,session) { // _x_link_counter > counter_link
 		if ( tracking === undefined ) return false
 		if ( protocol === 'local' ) {
